--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Daniel Dills <dills253@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pandas = "^1.3.0"
+seaborn = "^0.11.1"
+matplotlib = "^3.4.2"
 
 [tool.poetry.dev-dependencies]
 
